Add default-to support (#33)
Title: Default chat targeting, status-bar indicator, and wiring from
space config

Summary
- Adds default chat targeting across interactive UIs.
- Shows current chat target in the Advanced UI status bar.
- Adds session-scoped /target command to the Debug (Interactive) UI.
- Wires defaults from space.yaml into both UIs.
- Includes small reliability/bug fixes in Advanced UI.

Why
- Reduce friction when repeatedly chatting with the same participant(s).
- Make targeting visible at-a-glance and easy to adjust per session.

Key changes
- Advanced Interactive UI (src/cli/utils/advanced-interactive-ui.ts)
- Applies default chat targets when sending chat (in wrapEnvelope) if no
explicit to is set.
  - Status bar displays the effective chat target (e.g., “to mew”).
- Warns once per session if a configured target isn’t yet known;
messages still send.
- startAdvancedInteractiveUI signature now accepts defaultChatTargets
(ws, participantId, spaceId, themeName, defaultChatTargets).
- Fixed: mapping of string tools now returns correctly; removed
misplaced default-targeting logic from a resize effect.

- Debug (Interactive) UI (src/cli/utils/interactive-ui.ts)
  - Applies the same default-targeting logic in wrapEnvelope.
  - Adds /target command for session override:
    - /target show — display effective targets
    - /target none — clear session override (revert to config)
    - /target <id...> — set session override to one or more participants

- Space command wiring (src/cli/commands/space.ts)
- Reads defaults from config and passes to UIs in both interactive
launch paths (advanced and debug):
    - participants.<id>.default_to.chat
    - defaults.routing.default_to.chat

Target selection precedence
1) Explicit message to
2) Session override via /target (Debug UI)
3) Participant-scoped default from config
4) Global default from config
5) Broadcast (no to)

Configuration
- Optional; behavior remains broadcast if no defaults are provided.
- Supported 

--- a/templates/coder-agent/space.yaml
+++ b/templates/coder-agent/space.yaml
@@ -10,6 +10,8 @@ participants:
   # Human participant with full capabilities (can approve proposals)
   human:
     # No tokens field - generated at runtime in .mew/tokens/
+    default_to:
+      chat: ["mew"]
     capabilities:
       - kind: "*"  # Full capabilities including proposal approval
 
@@ -106,7 +108,7 @@ participants:
   mcp-fs-bridge:
     type: local
     command: "mew"
-    args: ["bridge", "start", "--gateway", "ws://localhost:${PORT}", "--space", "{{SPACE_NAME}}", "--token", "${TOKEN}", "--participant-id", "mcp-fs-bridge", "--mcp-command", "mew", "--mcp-args", "mcp,filesystem,./"]
+    args: ["bridge", "start", "--gateway", "ws://localhost:${PORT}", "--space", "{{SPACE_NAME}}", "--token", "${TOKEN}", "--participant-id", "mcp-fs-bridge", "--mcp-command", "mew", "--mcp-args", "mcp,filesystem,{{WORKSPACE_PATH}}"]
     auto_start: true
     # No tokens field - generated at runtime in .mew/tokens/
     capabilities:
