Add participant/status capability to all participants in all space configs

--- a/e2e/scenario-1-basic/template/space.yaml
+++ b/e2e/scenario-1-basic/template/space.yaml
@@ -18,11 +18,13 @@ participants:
     capabilities:
       - kind: "chat"
       - kind: "system/*"
+      - kind: "participant/status"
   test-client:
     tokens: ["test-token"]
     capabilities:
       - kind: "chat"
       - kind: "system/*"
+      - kind: "participant/status"
     output_log: "./logs/test-client-output.log"
     auto_connect: true
 
