--- a/e2e/scenario-11-chat-controls/template/space.yaml
+++ b/e2e/scenario-11-chat-controls/template/space.yaml
@@ -36,6 +36,7 @@ participants:
       - kind: "reasoning/*"
       - kind: "participant/*"
       - kind: "system/*"
+      - kind: "participant/status"
     output_log: "./logs/test-client-output.log"
     auto_connect: true
 
