--- a/e2e/scenario-12-stream-controls/template/space.yaml
+++ b/e2e/scenario-12-stream-controls/template/space.yaml
@@ -32,6 +32,7 @@ participants:
       - kind: "stream/*"
       - kind: "participant/*"
       - kind: "system/*"
+      - kind: "participant/status"
     output_log: "./logs/test-client-output.log"
     auto_connect: true
 
