--- a/e2e/scenario-6-errors/template/space.yaml
+++ b/e2e/scenario-6-errors/template/space.yaml
@@ -9,6 +9,7 @@ participants:
     capabilities:
       - kind: "chat"
       - kind: "system/*"
+      - kind: "participant/status"
     output_log: "./logs/test-client-output.log"
     auto_connect: true
 
