--- a/e2e/scenario-13-participant-controls/template/space.yaml
+++ b/e2e/scenario-13-participant-controls/template/space.yaml
@@ -31,6 +31,7 @@ participants:
       - kind: "participant/*"
       - kind: "chat"
       - kind: "system/*"
+      - kind: "participant/status"
     output_log: "./logs/test-client-output.log"
     auto_connect: true
 
