--- a/package.json
+++ b/package.json
@@ -55,11 +55,13 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/server-filesystem": "^0.6.2",
+    "@types/electron": "^1.4.38",
     "@types/uuid": "^10.0.0",
     "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
     "debug": "^4.3.4",
+    "electron": "^38.2.2",
     "eventemitter3": "^5.0.1",
     "express": "^4.18.2",
     "ink": "^3.2.0",
@@ -67,6 +69,7 @@
     "jsonpath-plus": "^10.3.0",
     "micromatch": "^4.0.5",
     "openai": "^5.20.1",
+    "phaser": "^3.90.0",
     "pm2": "^6.0.10",
     "react": "^18.2.0",
     "uuid": "^10.0.0",
